dataset1235/2025-2/610742602/users/59982477/executions/906907063_4190502342.log
== SUBMISSION (2025-08-19 21:19:44)
-- CODE: 
amigos=4
total_da_conta: 180
print (total_da_conta / amigos)
print("o valor que cada um tem que desemnolsar é de: R$,45")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (total_da_conta / amigos)
           ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (total_da_conta / amigos)
           ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:27:31)
-- CODE: 
amigos=4
total_da_conta=180
valor que cada um tem que desembolsar=total_da_conta/amigos
print("o valor que cada um tem que desembolsar é de: R$,45")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    valor que cada um tem que desembolsar=total_da_conta/amigos
          ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
File "XXXX", line 3
    valor que cada um tem que desembolsar=total_da_conta/amigos
          ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:33:03)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:18:41)
-- CODE: 
amigos=4
total_da_conta: 180
total_da_conta / amigos 
print("o valor que cada um tem que desemnolsar é de: R$,45")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_da_conta / amigos 
    ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_da_conta / amigos 
    ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:19:20)
-- CODE: 
amigos=4
total_da_conta: 180
print ("total_da_conta / amigos")
print("o valor que cada um tem que desemnolsar é de: R$,45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desemnolsar é de: R$,45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desemnolsar é de: R$,45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:19:44)
-- CODE: 
amigos=4
total_da_conta: 180
print (total_da_conta / amigos)
print("o valor que cada um tem que desemnolsar é de: R$,45")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (total_da_conta / amigos)
           ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (total_da_conta / amigos)
           ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:38)
-- CODE: 
amigos=4
total_da_conta: 180
total_da_conta/amigos
print("o valor que cada um tem que desembolsar é de: R$,45")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_da_conta/amigos
    ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_da_conta/amigos
    ^^^^^^^^^^^^^^
NameError: name 'total_da_conta' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:07)
-- CODE: 
amigos=4
total_da_conta: 180
print ("total_da_conta/amigos")
print("o valor que cada um tem que desembolsar é de: R$,45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:28:44)
-- CODE: 
print(180/4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:24:30)
-- CODE: 
amigos=4
total_da_conta=180
total_da_conta/amigos
print("o valor que cada um tem que desembolsar é de: R$,45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:20:14)
-- CODE: 
amigos=4
total_da_conta: 180
print ("total_da_conta/amigos")
print("o valor que cada um tem que desemnolsar é de: R$,45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desemnolsar é de: R$,45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desemnolsar é de: R$,45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:23:00)
-- CODE: 
amigos=4
total_da_conta=180
total_da_conta/amigos
print("o valor que cada um tem que desembolsar é de: R$,45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:08)
-- CODE: 
amigos=4
total_da_conta: 180
print ("total_da_conta/amigos")
print("o valor que cada um tem que desembolsar é de: R$,45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:22:06)
-- CODE: 
amigos=4
total_da_conta: 180
print ("total_da_conta/amigos")
print("o valor que cada um tem que desembolsar é de: R$,45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
o valor que cada um tem que desembolsar é de: R$,45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
